[RESTEASY-1637] Profile with security manager, add permissions.xml to the tests